@@ -1,3 +1,7 @@
+2012-10-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* gsftopk.c: All current C compilers support `const'.
+
 2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* gsftopk.c: Pass program name string to kpse_set_program_name.
